# chessai

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Procfile  README.md  chessai.cpp
engine/: bits.cpp  bits.h  board.cpp  board.h  main  main.cpp  move.cpp  move.h  piece.h  util.cpp  util.h
src/: chessai.cpp  id.cpp  id.h  image.cpp  image.h  server.cpp  server.h
